<resources>
    <string name="app_name">Techno Music</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="playlists">PlayLists</string>
    <string name="songs">Songs</string>
    <string name="artist">Artist</string>
    <string name="album">Album</string>
    <string name="genres">Genres</string>
    <string name="search">Search</string>
    <string name="permission_message">The app needs permission to access your device storage for playing music.</string>
    <string name="permission_message_rationale">To enable offline music and enhance your experience, we need your permission to access your device\'s storage for media files.</string>
    <string name="permission_message_manual">We value your privacy. Rest assured, we only access what\'s needed to curate your music experience. Your data stays protected with us. \n\nClick on Go To Settings -> Permissions -> Music and audio -> Allow.</string>
    <string name="give_permission">Give Permission</string>
    <string name="go_to_settings">Go To Settings</string>
    <string name="storage_access">Storage Access</string>
</resources>