<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".mvvm.view.activity.PermissionActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clPermission"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/main_background"
                android:backgroundTint="@color/main_background"
                android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
                app:title="@string/app_name"
                app:titleCentered="true"
                app:titleTextColor="@color/white" />
        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvPermissionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextHeader"
            android:layout_marginStart="@dimen/dimen_25dp"
            android:text="@string/storage_access"
            app:layout_constraintBottom_toTopOf="@id/tvPermissionMessage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvPermissionMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextTitle"
            android:layout_marginTop="@dimen/dimen_12dp"
            android:paddingHorizontal="@dimen/dimen_25dp"
            android:text="@string/permission_message"
            android:alpha="0.7"
            app:layout_constraintBottom_toTopOf="@id/btGivePermission"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPermissionTitle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btGivePermission"
            style="@style/OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:layout_marginHorizontal="@dimen/dimen_25dp"
            android:text="@string/give_permission"
            app:cornerRadius="16dp"
            app:layout_constraintBottom_toTopOf="@id/btGoToSettings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPermissionMessage" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btGoToSettings"
            style="@style/OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:layout_marginHorizontal="@dimen/dimen_25dp"
            android:text="@string/go_to_settings"
            android:visibility="gone"
            app:cornerRadius="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btGivePermission" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>